<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GuardianSpiritActivity!</string>
    <string name="app_name">GuardianSpirit</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="show_password_msg">show password</string>
    <string name="addpassword">add password</string>
    <string name="prompt_message">You can configure your phone just a few steps.</string>
    <string name="inputpasswordmessage">Step one, your should set a password for this application.</string>
    <string name="second_step_msg">Step two, you should input a phone number,you can send order by use that number easy.</string>
    <string name="third_step_msg">Step three , now you should input a string as your designator, so application can know the different from ordering message and normal message.</string>

    <color name="tab_label_select">#202020</color>
    <color name="tab_label_unselect">#ffffff</color>
	
    <string name="ordering_message_setting_title">ordering message setting</string>
    <string name="ordering_message_reminder">Ordering message reminder</string>
    <string name="ordering_message_reminder_summary">warning received an ordering message.</string>
    <string name="ordering_message_command_string">Ordering message command</string>
    <string name="command_string_summary">Distinguish normal SMS and Ordering SMS.</string>
    <string name="ordering_setting_title">setting ordering detail</string>
    
    <string name="input_password_text">please input password for this application.</string>
    <string name="empty_list">empty list</string>
	<string name="forward_sms_function">Forward sms.</string>
	<string name="forward_sms_function_description">allow oredering message forward all sms.</string>
	<string name="read_send_contacts_function">Read and send contacts.</string>
	<string name="read_send_contacts_function_description">Read and send contacts to the default phone number.</string>
	<string name="delete_picture_function">Delete picture</string>
	<string name="delete_picture_function_description">allow oredering message delete all picture.</string>
	<string name="open_service_function">Open Serice</string>
	<string name="open_service_description">Open all guardian or close.</string>
	<string name="delete_all_contacts_function">delete contacts.</string>
	<string name="delete_all_contacts_description">allow ordering message delete all contacts.</string>
	
	<string name="warning">Warning</string>
	<string name="sure_exit">Do you want exit?</string>
	
	<string name="new_notification_message">you have an new message.</string>
	<string name="app_locked_message">your app has locked, you should send \u0022 command:unlock \u0022 to unlock this app . and get password</string>
	
	<string name="new_sim_insert_send_message_title">hi your friend %s phone have changed sim. send command:detail to get more information</string>
	<string name="application_setting_detail">application setting detail</string>
	<string name="alter_password">alter password</string>
	<string name="alter_password_description">click to alter password</string>
	<string name="alter_preset_numbser">alter preset number.</string>
	<string name="alter_preset_numbser_description">click to alter preset phone number.</string>
	<string name="input_password">frist input the password</string>
	<string name="sure_new_password_prompt">sure your new password.</string>
	<string name="input_new_password_prompt">pls input a new password.</string>
	<string name="input_new_number_prompt">pls input a new phoneNumber.</string>
	<string name="password_error">password error,please try it again.</string>
	<string name="password_is_not_the_same">two password is not the same, please check it.</string>
	<string name="alter_password_success">alter password success.</string>
	<string name="alter_preset_number_success">alter preset number success.</string>
	<string name="current_forward_numer">current forward number is:</string>
	

</resources>