<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:textSize="21dip" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="5dip" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="30dip"
            android:textSize="21dip"/>

        <EditText
            android:id="@+id/new_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone">
        </EditText>
        
        <TextView
            android:id="@+id/sure_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="5dip"
            android:textSize="21dip"
            android:text="@string/sure_new_password_prompt" />

        <EditText
            android:id="@+id/sure_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
           	android:inputType="textPassword"
            android:layout_marginTop="10dip" >
        </EditText>
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="54dip"
        android:background="@android:drawable/bottom_bar"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/ok" />
    </RelativeLayout>

</LinearLayout>