<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:textSize="16dip"
            android:text="@string/second_step_msg" />

        <EditText
            android:id="@+id/default_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" 
            android:layout_marginTop="5dip"/>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:textSize="16dip"
            android:text="@string/third_step_msg" />
        
        <EditText
            android:id="@+id/default_oreder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" 
            android:layout_marginTop="5dip"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="54dip"
        android:background="@android:drawable/bottom_bar"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/ok" />
    </RelativeLayout>

</LinearLayout>